--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 </div>
 
 <div class="-quarter">
-  <img src="a1.jpg" alt="Boss" style="width:45%" class="-circle -hover-opacity">
+  <img src="a1.JPG" alt="Boss" style="width:45%" class="-circle -hover-opacity">
   <h3>Ashey Gulati</h3>
   <p>Co-founder , MD , Support</p>
 </div>
@@ -122,7 +122,7 @@
 
 <div class="-quarter">
 <div class="-card-2 -white">
-   <img src="c2.jpg" alt="Cinque Terre" style="width:100%">
+   <img src="c2.JPG" alt="shopam" style="width:100%">
   <div class="-container">
   <h3>MR.Abhishek gupta</h3>
   <h4>business</h4>
@@ -140,7 +140,7 @@
 
 
 
- <img src="c1.jpg" alt="Vernazza" style="width:100%">
+ <img src="c1.JPG" alt="emma" style="width:100%">
   <div class="-container">
   <h3>emma watson</h3>
   <h4>actress</h4>
@@ -153,7 +153,7 @@
 
 <div class="-quarter">
 <div class="-card-2 -white">
-  <img src="c.jpg" alt="Monterosso" style="width:100%">
+  <img src="c.JPG" alt="ashrey" style="width:100%">
   <div class="-container">
   <h3>ashrey restro</h3>
   <h4>his passion n love</h4>
