--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
 
 <!-- Image Header -->
 <div class="-display-container -animate-opacity">
-  <img src="2.png" alt="boat" style="width:100%;min-height:350px;max-height:600px;">
+  <img src="2.jpg" alt="boat" style="width:100%;min-height:350px;max-height:600px;">
   <div class="-container -display-bottomleft -margin-bottom">  
-    <button onclick="document.getElementById('id01').style.display='block'" class="-btn -xlarge -theme -hover-teal" title="Go To .CSS">get your website ready</BR><FONT SIZE="2">(CLICK HERE)</FONT></button>
+    <button onclick="document.getElementById('id01').style.display='block'" class="-btn -white -padding-large -large -margin-top -opacity -hover-opacity-off -theme -hover-teal" title="Go To .CSS">get your website ready</button>
   </div>
 </div>
 
@@ -87,31 +87,63 @@
   </div>
 </div>
 
-<!-- Team Container -->
-<div class="-container -padding-64 -center" id="team">
-<h2>OUR TEAM</h2>
-<p>Meet the team - our office rats:</p>
+<!-- About Section -->
+<div class="-container -padding-128" id="about">
+  <h3 class="-center">ABOUT THE COMPANY</h3>
+  <p class="-center -large">Key features of our company</p>
+  <div class="-row-padding -center" style="margin-top:64px">
+    <div class="-quarter">
+      <i class="fa fa-desktop -margin-bottom -jumbo -center"></i>
+      <p class="-large">Responsive</p>
+      <p>our websites are mobile friendly and adjusts themselves according to the screen size.</p>
+    </div>
+    <div class="-quarter">
+      <i class="fa fa-diamond -margin-bottom -jumbo"></i>
+      <p class="-large">Design</p>
+      <p>we have hundreds of designed websites which are surely a delight for your and the others viewers eyes.</p>
+    </div>
+    <div class="-quarter">
+      <i class="fa fa-heart -margin-bottom -jumbo"></i>
+      <p class="-large">Passion</p>
+      <p>our websites are not just about iternet presence , design and business only , we are more about passion which our websites reflect.</p>
+    </div>
 
-<div class="-row"><br>
-
-<div class="-quarter">
-  <img src="heyy.jpg" alt="Boss" style="width:45%" class="-circle -hover-opacity">
-  <h3>Abhishek Gupta</h3>
-  <p>Co-founder ,Web Designer</p>
+    <div class="-quarter">
+      <i class="fa fa-cog -margin-bottom -jumbo"></i>
+      <p class="-large">Support</p>
+      <p>our websites are our passion and thats why we will provide 24x7 support to our website holders.</p>
+    </div>
+  </div>
 </div>
-
-<div class="-quarter">
-  <img src="a1.JPG" alt="Boss" style="width:45%" class="-circle -hover-opacity">
-  <h3>Ashey Gulati</h3>
-  <p>Co-founder , MD , Support</p>
+<!-- Skills Section -->
+<div class="-container -light-grey -padding-64">
+  <div class="-row-padding">
+    <div class="-col m6">
+      <h3>Our Skills.</h3>
+      <p>We are not just a company who sells and earn , from the beginning we are about our passion , ethics , customer satisfaction , bringing change and improving the skills of our company. our company is and always will be fully trasparent to our customers. </p>
+      <p>what customers can expect from us , we tell that very clearly , thus we have stated our skills in accordance of our mastery in them : </p>
+    </div>
+    <div class="-col m6">
+ <p class="-wide"><i class="fa fa-cog -margin-right"></i>support</p>
+      <div class="-progress-container -grey">
+        <div class="-progressbar -dark-grey" style="width:100%"></div>
+      </div>
+  <p class="-wide"><i class="fa fa-desktop -margin-right"></i>Web Design</p>
+      <div class="-progress-container -grey">
+        <div class="-progressbar -dark-grey" style="width:95%"></div>
+      </div>
+ <p class="-wide"> <i class="fa fa-camera -margin-right"></i>Photography</p>
+      <div class="-progress-container -grey">
+        <div class="-progressbar -dark-grey" style="width:85%"></div>
+      </div>
+    
+      <p class="-wide"><i class="fa fa-photo -margin-right"></i>Photoshop</p>
+      <div class="-progress-container -grey">
+        <div class="-progressbar -dark-grey" style="width:80%"></div>
+      </div>
+    </div>
+  </div>
 </div>
-
-
-
-
-</div>
-</div>
-
 <!-- Work Row -->
 <div class="-row-padding -padding-64 -theme-l1" id="work">
 
@@ -142,7 +174,7 @@
 
  <img src="c1.JPG" alt="emma" style="width:100%">
   <div class="-container">
-  <h3>emma watson</h3>
+  <h3>lucy stone </h3>
   <h4>actress</h4>
   <p>HER PERSONAL PHOTO ALBUM</p>
   <p>Recieved 2 contracts based on our website </p>
@@ -179,13 +211,14 @@
     <p>Choose a pricing plan that fits your needs.</p><br>
     <div class="-third -margin-bottom">
       <ul class="-ul -border -hover-shadow">
-        <li class="-theme">
+        <li class="-theme111">
           <p class="-xlarge">Basic</p>
         </li>
         <li class="-padding-16"><b>1 designer & 1 plain</b> webpage</li>
         <li class="-padding-16"><b>1 year </b>hosting</li>
         <li class="-padding-16"><b>location marker </b>included</li>
         <li class="-padding-16"><b>Endless</b> Support</li>
+<li class="-padding-16"><b>Best Suited for </b>startups & small scale businesses</li>
         <li class="-padding-16">
         <font size="6">Rs 3000</font>
           <span class="-opacity">per year</span>
@@ -205,10 +238,12 @@
         <li class="-padding-16"><b>1.5 year </b>hosting</li>
         <li class="-padding-16"><b>location marker </b>included</li>
         <li class="-padding-16"><b>Endless</b> Support</li>
+<li class="-padding-16"><b>Best Suited for </b>medium scale</li>
         <li class="-padding-16">
         <font size="6">Rs 4500</font>
           <span class="-opacity">for 1.5 year</span>
         </li>
+
         <li class="-theme-l5 -padding-24">
           <button class="-btn -teal -padding-large"><i class="fa fa-check"></i> Sign Up</button>
         </li>
@@ -217,13 +252,14 @@
 
     <div class="-third -margin-bottom">
       <ul class="-ul -border -hover-shadow">
-        <li class="-theme">
+        <li class="-theme111">
           <p class="-xlarge">Premium</p>
         </li>
       <li class="-padding-16"><b>3 designer & 2 plain</b> webpage</li>
         <li class="-padding-16"><b>2 year </b>hosting</li>
         <li class="-padding-16"><b>location marker </b>included</li>
         <li class="-padding-16"><b>Endless</b> Support</li>
+<li class="-padding-16"><b>Best Suited for </b>long term & large businesses</li>
         <li class="-padding-16">
         <font size="6">Rs 5000</font>
           <span class="-opacity">for two year</span>
@@ -246,25 +282,7 @@
       <p><i class="fa fa-phone -text-teal -xlarge"></i>9811718474</p>
       <p><i class="fa fa-envelope-o -text-teal -xlarge"></i>Agabhishek02@gmail.com</p>
     </div>
-    <div class="-col m7">
-      <form class="-container -card-4 -padding-16 -white" action="form.asp" target="_blank">
-      <div class="-group">      
-        <label class="-label">Name</label>
-        <input class="-input" type="text" name="Name" required>
-      </div>
-      <div class="-group">      
-        <label class="-label">Email</label>
-        <input class="-input" type="text" name="Email" required>
-      </div>
-      <div class="-group">      
-        <label class="-label">Message</label>
-        <input class="-input" type="text" name="Message" required>
-      </div>  
-      <input class="-check" type="checkbox" checked name="Like">
-      <label class="-validate">I Like it!</label>
-      <button type="submit" class="-btn -right -theme">Send</button>
-      </form>
-    </div>
+   
   </div>
 </div>
 
@@ -294,7 +312,39 @@ marker.setMap(map);
 
 google.maps.event.addDomListener(window, 'load', initialize);
 </script>
+ <!-- Grid -->
+  <div class="-row-padding" id="about">
+    <div class="-center -padding-64">
+      <span class="-xlarge -bottombar -border-dark-grey -padding-16">Who We Are</span>
+    </div>
+<p class="-center -large">meet our office rats</p>
 
+    <div class="-third -margin-bottom">
+      <div class="-card-4">
+        <img src="abhi.jpg" alt="John" style="width:100%">
+        <div class="-container">
+          <h3>Abhishek Gupta</h3>
+          <p class="-opacity">Co- founder , CEO , Web Designer</p>
+          <p></p>
+          <p><a href="index.html"><button class="-btn-block">Contact</button></a></p>
+        </div>
+      </div>
+    </div>
+
+    <div class="-third -margin-bottom">
+      <div class="-card-4">
+        <img src="1.jpg" alt="Mike" style="width:100%">
+        <div class="-container">
+          <h3>Ashrey Gulati</h3>
+          <p class="-opacity">Co-founder , Marketing Head , Support</p>
+          <p></p>
+          <p><button class="-btn-block">Contact</button></p>
+        </div>
+      </div>
+    </div>
+
+   
+  </div>
 <!-- Footer -->
 <footer class="-container -padding-32 -theme-d1 -center">
   <h4>Follow Us</h4>
