--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
   <h3>MR.Abhishek gupta</h3>
   <h4>business</h4>
   <p>SHOPAM NOW</p>
-  <p>earned nearly 10 millions in a year </p>
+  <p>about to earn 10 millions in a year </p>
   <p>always gives credit to our service</p>
 
  
@@ -226,7 +226,7 @@
         <li class="-padding-16"><b>Endless</b> Support</li>
 <li class="-padding-16"><b>Best Suited for </b>startups & small scale businesses</li>
         <li class="-padding-16">
-     <h2 class="w3-wide"><i class="fa fa-inr"></i> 3000</h2>
+     <h2 class="w3-wide"><i class="fa fa-inr"></i> 2999</h2>
           <span class="-opacity">per year</span>
         </li>
         <li class="-theme-l5 -padding-24">
@@ -246,7 +246,7 @@
         <li class="-padding-16"><b>Endless</b> Support</li>
 <li class="-padding-16"><b>Best Suited for </b>medium scale</li>
         <li class="-padding-16">
-        <h2 class="w3-wide"><i class="fa fa-inr"></i> 4500</h2>
+        <h2 class="w3-wide"><i class="fa fa-inr"></i> 4499</h2>
           <span class="-opacity">for 1.5 year</span>
         </li>
 
@@ -267,7 +267,7 @@
         <li class="-padding-16"><b>Endless</b> Support</li>
 <li class="-padding-16"><b>Best Suited for </b>long term & large businesses</li>
         <li class="-padding-16">
-        <h2 class="w3-wide"><i class="fa fa-inr"></i> 5000</h2>
+        <h2 class="w3-wide"><i class="fa fa-inr"></i> 4999</h2>
           <span class="-opacity">for two year</span>
         </li>
         <li class="-theme-l5 -padding-24">
