--- a/index.html
+++ b/index.html
@@ -165,8 +165,8 @@
   <h3>MR.Abhishek gupta</h3>
   <h4>business</h4>
   <p>SHOPAM NOW</p>
-  <p>about to earn 10 millions in a year </p>
-  <p>always gives credit to our service</p>
+  <p></p>
+  <p></p>
 
  
   </div>
@@ -181,9 +181,9 @@
  <img src="c1.JPG" alt="emma" style="width:100%">
   <div class="-container">
   <h3>lucy stone </h3>
-  <h4>actress</h4>
-  <p>HER PERSONAL PHOTO ALBUM</p>
-  <p>Recieved 2 contracts based on our website </p>
+  <h4></h4>
+  <p>PERSONAL PHOTO ALBUM</p>
+  <p></p>
 
   </div>
   </div>
@@ -193,10 +193,10 @@
 <div class="-card-2 -white">
   <img src="c.JPG" alt="ashrey" style="width:100%">
   <div class="-container">
-  <h3>ashrey restro</h3>
-  <h4>his passion n love</h4>
-  <p>MOST PREFERRED RESTRO OF OF DELHI</p>
-  <p>19 branches</p>
+  <h3> restro</h3>
+  <h4></h4>
+  <p></p>
+  <p></p>
   <p>reservations are through our website only</p>
  
   </div>
