--- a/index.html
+++ b/index.html
@@ -155,16 +155,19 @@
 
 <div class="-quarter">
 <h2>Our Work</h2>
-<p>we started in 2016 and since then there is no turning back . we have worked with many customers from large to small scale to make our quality best from others in reasonable price . below you can see some of of our works :</p>
+<p>we started in 2016 and since then there is no turning back . we have worked with many customers from large to small scale to make our quality best from others in reasonable price . Below you can see some of dummies of our works :</p>
 </div>
+
+
+
 
 <div class="-quarter">
 <div class="-card-2 -white">
-   <img src="c2.JPG" alt="shopam" style="width:100%">
+<a href="https://ag14.github.io/">   <img src="ag14.JPG" alt="shopam" style="width:100%"></a>
   <div class="-container">
-  <h3>MR.Abhishek gupta</h3>
-  <h4>business</h4>
-  <p>SHOPAM NOW</p>
+  <h3>5d property gallery </h3>
+  <h4></h4>
+  <p></p>
   <p></p>
   <p></p>
 
@@ -178,9 +181,9 @@
 
 
 
- <img src="c1.JPG" alt="emma" style="width:100%">
+<a href="https://sg1414.github.io/"> <img src="salman2.JPG" alt="emma" style="width:100%"></a>
   <div class="-container">
-  <h3>lucy stone </h3>
+  <h3>Salman Khan</h3>
   <h4></h4>
   <p>PERSONAL PHOTO ALBUM</p>
   <p></p>
@@ -189,19 +192,28 @@
   </div>
 </div>
 
+
+
+
+
+
 <div class="-quarter">
 <div class="-card-2 -white">
-  <img src="c.JPG" alt="ashrey" style="width:100%">
+
+
+
+<a href="https://rickygupta568.github.io/"> <img src="deeps.JPG" alt="emma" style="width:100%"></a>
   <div class="-container">
-  <h3> restro</h3>
+  <h3>Deepika Padukone</h3>
   <h4></h4>
+  <p>PERSONAL PHOTO ALBUM</p>
   <p></p>
-  <p></p>
-  <p>reservations are through our website only</p>
- 
+
   </div>
   </div>
 </div>
+
+
 
 </div>
 
